--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   web3dart: ^2.3.3
   dio: ^4.0.4
   flutter_simple_dependency_injection: ^2.0.0
+  bloc: ^8.0.2
+  flutter_bloc: ^8.0.1
 
 dev_dependencies:
   flutter_test:
