--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,11 @@ dependencies:
   flutter_simple_dependency_injection: ^2.0.0
   bloc: ^8.0.2
   flutter_bloc: ^8.0.1
+  connectivity_plus: ^2.2.0
+  firebase_auth: ^3.3.5
+  provider: ^6.0.2
+  firebase_core: ^1.11.0
+  introduction_screen: ^2.1.0
 
 dev_dependencies:
   flutter_test:
