--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,11 +46,29 @@ dependencies:
   firebase_auth: ^3.3.5
   provider: ^6.0.2
   firebase_core: ^1.11.0
-  introduction_screen: ^2.1.0
+  introduction_screen: ^3.0.0
+
+  # hive
+  hive: ^2.0.5
+  hive_flutter: ^1.1.0
+  qr_code_dart_scan: ^0.3.0
+  webview_flutter: ^3.0.2
+  syncfusion_flutter_charts: ^20.1.47+1
+  syncfusion_localizations: ^20.1.47
+  flutter_localizations: 
+    sdk: flutter
+    version: ^0.0.0
+  hooks_riverpod: ^1.0.3
+  stomp_dart_client: ^0.4.4
+  flutter_staggered_grid_view: ^0.6.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  # hive database generators
+  build_runner: ^2.1.7
+  hive_generator: ^1.1.2
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
