--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,8 @@ dependencies:
   hooks_riverpod: ^1.0.3
   stomp_dart_client: ^0.4.4
   flutter_staggered_grid_view: ^0.6.1
+  flutter_screenutil: ^5.5.3+2
+  battery_indicator: ^0.1.1
 
 dev_dependencies:
   flutter_test:
