--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   shimmer: ^2.0.0
-  firebase_messaging: ^11.2.4
-  overlay_support: ^1.2.1
+  firebase_messaging: ^12.0.2
+  overlay_support: ^2.0.1
   animations: ^2.0.2
   web3dart: ^2.3.3
   dio: ^4.0.4
@@ -51,7 +51,7 @@ dependencies:
   # hive
   hive: ^2.0.5
   hive_flutter: ^1.1.0
-  qr_code_dart_scan: ^0.3.0
+  qr_code_dart_scan: ^0.6.0
   webview_flutter: ^3.0.2
   syncfusion_flutter_charts: ^20.1.47+1
   syncfusion_localizations: ^20.1.47
@@ -63,6 +63,9 @@ dependencies:
   flutter_staggered_grid_view: ^0.6.1
   flutter_screenutil: ^5.5.3+2
   battery_indicator: ^0.1.1
+  call_log: ^4.0.0
+  http: ^0.13.5
+  flutter_riverpod: ^1.0.4
 
 dev_dependencies:
   flutter_test:
@@ -77,7 +80,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
